--- a/RobotEditor/RobotEditor.csproj
+++ b/RobotEditor/RobotEditor.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Model\Carbody.cs" />
     <Compile Include="Model\Joint.cs" />
     <Compile Include="Model\Robot.cs" />
+    <Compile Include="Model\Voxel.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\BoundingBox.cs" />
