--- a/RobotEditor/RobotEditor.csproj
+++ b/RobotEditor/RobotEditor.csproj
@@ -91,6 +91,10 @@
     <Compile Include="Model\Joint.cs" />
     <Compile Include="Model\Robot.cs" />
     <Compile Include="Model\Voxel.cs" />
+    <Compile Include="Model\VoxelNodeLeaf.cs" />
+    <Compile Include="Model\VoxelNodeInner.cs" />
+    <Compile Include="Model\VoxelNode.cs" />
+    <Compile Include="Model\VoxelOctree.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\BaseViewModel.cs" />
     <Compile Include="ViewModel\BoundingBox.cs" />
