--- a/RobotEditor/RobotEditor.csproj
+++ b/RobotEditor/RobotEditor.csproj
@@ -87,6 +87,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Helper\DegreeToRadian.cs" />
     <Compile Include="Model\Carbody.cs" />
     <Compile Include="Model\Joint.cs" />
     <Compile Include="Model\Booth.cs" />
