--- a/VirtualRobotWrapperRunner/VirtualRobotWrapperRunner.csproj
+++ b/VirtualRobotWrapperRunner/VirtualRobotWrapperRunner.csproj
@@ -70,7 +70,8 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="VirtualRobotWrapper">
+    <Reference Include="VirtualRobotWrapper, Version=1.0.6571.25920, Culture=neutral, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\RobotWrapper\VirtualRobotWrapper.dll</HintPath>
     </Reference>
   </ItemGroup>
