- Fixed method to add octree into reference octree at Root - Added method to add an octree at any position in a reference Octree - Started to implement method to rotate a octree around its root

--- a/RobotEditor/RobotEditor.csproj
+++ b/RobotEditor/RobotEditor.csproj
@@ -101,7 +101,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Helper\DegreeToRadian.cs" />
+    <Compile Include="Helper\MatrixHelper.cs" />
     <Compile Include="Model\Carbody.cs" />
     <Compile Include="Model\Joint.cs" />
     <Compile Include="Model\Booth.cs" />
